# cookiecutter-python-template

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.cfg
.github/workflows/: test.yml
cookiecutter_python_package_template/: Animal.py  helper.py
dev/notebooks/: driver.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
hooks/: post_gen_project.py
tests/: test_animal.py
{{cookiecutter.project_name}}/: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/dev/notebooks/: driver.py
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/docs/_templates/: moreinfo.html
{{cookiecutter.project_name}}/tests/: test_animal.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name.lower().replace('-', '_')}}/: Animal.py  __init__.py
