[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "cookiecutter_python_package_template"
description = "cookiecutter python ntemplate"
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/camminady/cookiecutter_python_package_template"

keywords = []



license = "MIT"


[tool.poetry.dependencies]
python = "^3.7"

cookiecutter = "^1.7"
jinja2-git = "^1.1"
lice = "^0.6"


[tool.poetry.dev-dependencies]
binaryornot = "^0.4"
flake8-pytest-style = "^1.6"
nitpick = "^0.32"

pytest = "^7.1"
pytest-randomly = "^3.11"
pytest-cookies = "^0.6"

safety = "^1.10"
tomlkit = "^0.10"
